apps/nginx-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  labels:
    name: nginx
spec:
  rules:
    - host: "nginx.cedricbrisson.ca"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - "nginx.cedricbrisson.ca"
      secretName: nginx
